--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <title>{{ title }}</title>
 
@@ -12,9 +13,10 @@
   <!-- block for specific page styles -->
   {% block styles %}{% endblock %}
 </head>
+
 <body>
   <!-- Header -->
-  <div class="header-container">
+  <!-- <div class="header-container">
     <div class="header-content">
       <a class="header-left" href="index.html">
         <img class="app-logo" src="@images/app-logo.svg"><span>App demo</span>
@@ -22,7 +24,39 @@
       {% include "src/views/partials/navigation.html" %}
       <div class="header-right"></div>
     </div>
-  </div>
+  </div> -->
+
+  <header id="header">
+    <div class="inner">
+      <nav class="nav">
+        <button class="barMenu">
+          <span class="bar"></span>
+        </button>
+        <div class="gnb-wrapper">
+          <div class="gnb-inner">
+            <button class="closeGnb">x</button>
+            <ul class="gnb">
+              <li><a href="./about-choonsik.html">춘식이 소개</a></li>
+              <li><a href="./room-choonsik.html">춘식이방</a></li>
+              <li><a href="./photo-choonsik.html">춘식이 화보</a></li>
+              <li><a href="./diary-choonsik.html">춘식일기</a></li>
+              <li><a href="./game-choonsik.html">춘식게임</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <h1 class="logo">
+        <a href="./choonsik_lover.html">
+          <img src="https://item.kakaocdn.net/do/b5d3d6a7b67fbf5afdaffb79fffbf8b18f324a0b9c48f77dbce3a43bd11ce785"
+            alt="춘식">
+        </a>
+      </h1>
+    </div>
+  </header>
+
+
+
+
 
   <!-- Main content -->
   <main class="main-container">
@@ -42,4 +76,5 @@
   <!-- block for specific page scripts -->
   {% block scripts %}{% endblock %}
 </body>
+
 </html>
