--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -1,7 +1,7 @@
 {% extends "src/views/layouts/default.html" %}
 
 <!-- set variables used in layout -->
-{% set title="Home" %}
+{% set title="춘식러버 메인" %}
 
 {% block styles %}
 <!-- load specific page style -->
