--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -21,4 +21,93 @@
     <img class="home-image" src="@images/dolphin.jpg">
   </div>
 </section>
+
+<div class="choonsik-lover-wrapper">
+  <section class="visual">
+    <div class="marquee_wrap">
+      <div class="marquee_box">
+        <span class="marquee_text">lovely choonsik</span>
+      </div>
+      <div class="marquee_box">
+        <span class="marquee_text">lovely choonsik</span>
+      </div>
+      <div class="marquee_box">
+        <span class="marquee_text">lovely choonsik</span>
+      </div>
+      <div class="marquee_box">
+        <span class="marquee_text">lovely choonsik</span>
+      </div>
+    </div>
+
+    <div class="floating-obj">
+      <span class="obj-item"><img
+          src="https://item.kakaocdn.net/do/c5c470298d527ef65eb52883f0f186c49f5287469802eca457586a25a096fd31"
+          alt="춘식하트"></span>
+      <span class="obj-item"><img
+          src="https://item.kakaocdn.net/do/c5c470298d527ef65eb52883f0f186c4f604e7b0e6900f9ac53a43965300eb9a"
+          alt="춘식꾹꾹"></span>
+      <span class="obj-item"><img
+          src="https://item.kakaocdn.net/do/c5c470298d527ef65eb52883f0f186c482f3bd8c9735553d03f6f982e10ebe70"
+          alt="춘식무지개"></span>
+    </div>
+  </section>
+
+
+
+  <section id="one" class="contentsBox">
+    <div class="row no-gutters">
+      <div class="col">
+        <div class="rectangle"></div>
+        <div class="about-choonsik">
+          <div class="text-block">
+            <h2 class="mb-0">choonsik</h2>
+            <h5>happy</h5>
+          </div>
+          <div class="blocks">
+            <div class="faces"></div>
+            <div class="faces"></div>
+            <div class="faces"></div>
+            <div class="faces"></div>
+            <div class="faces"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="two" class="contentsBox">
+    <div class="row no-gutters">
+      <div class="col">
+        <div class="room-choonsik">
+          <div>
+            <img src="https://i.pinimg.com/originals/95/8f/59/958f599f934e94f63d6d60b676707ece.png" class="img-fluid"
+              alt="Responsive image" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="three" class="contentsBox">
+    <div class="image"></div>
+    <div class="row no-gutters">
+      <div class="col">
+        <div class="elem">
+          <h2>GET OUT THERE</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="four" class="section">
+    <div class="image"></div>
+    <div class="row no-gutters">
+      <div class="col">
+        <div class="elem">
+          <h2>GO RIDE</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
 {% endblock %}
